--- a/webapp/webapp/webapp/Views/Home/Index.cshtml
+++ b/webapp/webapp/webapp/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Multi Tenant App";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to @ViewBag.TenantName tenant in environment @ViewBag.EnvironmentName</h1>
+    <p>You are currently under Tier: @ViewBag.Tier</p>
 </div>
