separate locals file

--- a/webapp/webapp/webapp/Views/Home/Index.cshtml
+++ b/webapp/webapp/webapp/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to @ViewBag.TenantName tenant in environment @ViewBag.EnvironmentName</h1>
-    <p>You are currently under Tier: @ViewBag.Tier</p>
+    <h1 class="display-4">Welcome to @ViewBag.TenantName
+    <p>Environment: @ViewBag.EnvironmentName</h1>
+    <p>Tier: @ViewBag.Tier</p>
+    <p>Application Version: 004</p>
 </div>
